--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>For you layal <3</title>
-  <link rel="stylesheet" href="./style.css">
+<html>
+  <head>
+    <title>Sorry Layal</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="q">
+      <div class="a">
+        <div class="m p">
+          I made a mistake
+          <hr />
+          <img
+            src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExdWs1dzg2cm5rajU4Z3V5bDNmd28xZHNnamU4cmV6bmUwZ2RibXQ5ZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/RWUqVYucDBD4A/giphy.gif"
+          />
+          <hr />
+          Plzz hover
+        </div>
+      </div>
 
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<svg id=svg>
-	<defs>
-	<g id="flower">
-		<path class="fc1" fill="none" stroke="#333333" stroke-width="1" 
-			  d="M0,0 q50,-25 100,0 q-50,25 -100,0 q-50,25 -100,0 q50,-25 100,0"/>	
-		<path class="fc2" fill="none" stroke="#333333" stroke-width="1"
-					d="M0,0 q53.03,-17.68 70.71,-70.71 q-53.03,17.68 -70.71,70.71 q-53.03,17.68 -70.71,70.71 q53.03,-17.68 70.71,-70.71"/>
-		<path class="fc3" fill="none" stroke="#333333" stroke-width="1"
-				  d="M0,0 q25,-50 0,-100 q-25,50 0,100 q-25,50 0,100 q25,-50 0,-100"/>
-		<path class="fc4" fill="none" stroke="#333333" stroke-width="1"
-				  d="M0,0 q-17.68,-53.03 -70.71,-70.71 q17.68,53.03 70.71,70.71 q17.68,53.03 70.71,70.71 q-17.68,-53.03 -70.71,-70.71"/>
-	</g>
-	</defs>
-</svg>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
+      <div class="w">
+        <div class="m">
+          Sorry ...
+          <hr />
+          <br /><br />You have the best كـــــــــرووووكس ever!<br /><br /><br />
+          <hr />
+          <img
+            src="https://www.animatedimages.org/data/media/1551/animated-sorry-and-apology-image-0082.gif"
+            class="f"
+          />
+          <hr />
+          <footer>from,<br /><b>DAN</b></footer>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
