--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             class="f"
           />
           <hr />
-          <footer>from,<br /><b>DAN</b></footer>
+          <footer>from,<br /><b>Mohammad</b></footer>
         </div>
       </div>
     </div>
